--- a/imgui.ini
+++ b/imgui.ini
@@ -9,46 +9,51 @@ Size=339,180
 Collapsed=0
 
 [Window][Scene]
-Pos=392,26
-Size=2490,1078
+Pos=363,26
+Size=997,678
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=3440,1347
+Size=1920,1024
 Collapsed=0
 
 [Window][Assets Manager]
-Pos=0,1106
-Size=2882,241
+Pos=0,706
+Size=1360,318
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Log]
-Pos=0,1106
-Size=2882,241
+Pos=0,706
+Size=1360,318
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Scene hierarchy]
 Pos=0,26
-Size=390,1078
+Size=361,678
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Object properties]
-Pos=2884,26
-Size=556,1321
+Pos=1362,26
+Size=558,998
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Testing]
+Pos=1312,391
+Size=494,394
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=3440,1321 Split=X Selected=0xE192E354
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=2882,974 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1284,1078 Split=X Selected=0xE192E354
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=390,684 Selected=0x9DEC7C02
-      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=2490,684 HiddenTabBar=1 Selected=0xE192E354
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1284,241 CentralNode=1 Selected=0x64F50EE5
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=556,974 Selected=0xAF3AD139
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=1920,998 Split=X Selected=0xE192E354
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1360,974 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1284,678 Split=X Selected=0xE192E354
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=361,684 Selected=0x9DEC7C02
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=997,684 Selected=0xE192E354
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1284,318 CentralNode=1 Selected=0x64F50EE5
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=558,974 Selected=0xAF3AD139
 
